--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,14 +14,8 @@
 
 <body>
     <div class="container">
-        <h1>Hola.</h1>
-        <div id="nameInput" class="input-group-lg center-block helloInput">
-            <p class="lead">What is your name?</p>
-            <input id="user_name" type="text" class="form-control" placeholder="name" aria-describedby="sizing-addon1" value="" />
-        </div>
-        <p id="response" class="lead text-center"></p>
-
-        <p id="databaseNames" class="lead text-center"></p>
+        <h1><a href="welcome">Hi! Click here to enter the chat</a></h1>
+        
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
